--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "test": "test"
   },
   "scripts": {
-    "test": "export NODE_ENV=testing; mocha -R mocha-multi --reporter-options spec=-,json=.results.json"
+    "test": "export NODE_ENV=testing; mocha -R mocha-multi --reporter-options spec=-,json=.results.json",
+    "start": "export NODE_ENV=development; node run-server.js"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0"
+    "mocha-multi": "^0.9.1",
+    "supertest": "^3.0.0",
+    "unexpected": "^10.23.0"
   },
   "keywords": [
     "node"
   ],
   "author": "Ethan Miller",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.16.0",
+    "bookshelf": "^0.10.3",
+    "express": "^4.14.1",
+    "knex": "^0.10.0",
+    "pg": "^6.1.2"
+  }
 }
