--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
   },
   "devDependencies": {
     "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0"
+    "mocha-multi": "^0.9.0",
+    "chai": "^3.5.0",
+    "supertest": "^1.2.0",
+    "unexpected": "^10.13.2"
   },
   "keywords": [
     "node"
   ],
   "author": "Ethan Miller",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.15.1",
+    "bookshelf": "^0.9.5",
+    "express": "^4.13.4",
+    "knex": "^0.10.0",
+    "pg": "^4.5.5"
+  }
 }
