--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
     "test": "test"
   },
   "scripts": {
+    "start": "export NODE_ENV=development; node run-server.js",
     "test": "export NODE_ENV=testing; mocha -R mocha-multi --reporter-options spec=-,json=.results.json"
   },
   "devDependencies": {
-    "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0"
+    "chai": "^4.1.2",
+    "mocha": "^2.5.3",
+    "mocha-multi": "^0.9.1",
+    "supertest": "^3.0.0",
+    "unexpected": "^10.37.4"
   },
   "keywords": [
     "node"
   ],
   "author": "Ethan Miller",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "bookshelf": "^0.13.3",
+    "express": "^4.16.3",
+    "knex": "^0.10.0",
+    "pg": "^7.4.1"
+  }
 }
