--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "test": "export NODE_ENV=testing; mocha -R mocha-multi --reporter-options spec=-,json=.results.json"
   },
   "devDependencies": {
+    "chai": "^4.3.0",
     "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0"
+    "mocha-multi": "^0.9.0",
+    "supertest": "^6.1.3",
+    "unexpected": "^12.0.0"
   },
   "keywords": [
     "node"
   ],
   "author": "Ethan Miller",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "bookshelf": "^0.9.5",
+    "express": "^4.17.1",
+    "knex": "^0.10.0",
+    "pg": "^8.5.1"
+  }
 }
